Fixed alignment bug, when using search strings in hash

--- a/source/styl/setting.styl
+++ b/source/styl/setting.styl
@@ -37,8 +37,9 @@ html.searching #search-tab-name
   html.searching &
     display: none
     
-    &.match
-      display: block
+  html.searching &.match
+  html.measuring &
+    display: block
 
 .setting.group-name
   color: black
@@ -56,8 +57,9 @@ html.searching #search-tab-name
   html.searching &
     display: none
     
-    &.match
-      display: block
+  html.searching &.match
+  html.measuring &
+    display: block
 
 .setting.bundle.list-box
   margin-bottom: 10px
